; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bhyveload/extr_bhyveload.c_cb_setgdt.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bhyveload/extr_bhyveload.c_cb_setgdt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ctx = common dso_local global i32 0, align 4
@BSP = common dso_local global i32 0, align 4
@VM_REG_GUEST_GDTR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"vm_set_desc(gdt)\00", align 1
@USERBOOT_EXIT_QUIT = common dso_local global i32 0, align 4
@gdtbase = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i64)* @cb_setgdt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cb_setgdt(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %8 = load i32, i32* @ctx, align 4
  %9 = load i32, i32* @BSP, align 4
  %10 = load i32, i32* @VM_REG_GUEST_GDTR, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i64, i64* %6, align 8
  %13 = sub i64 %12, 1
  %14 = call i32 @vm_set_desc(i32 %8, i32 %9, i32 %10, i32 %11, i64 %13, i32 0)
  store i32 %14, i32* %7, align 4
  %15 = load i32, i32* %7, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = call i32 @perror(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @USERBOOT_EXIT_QUIT, align 4
  %20 = call i32 @cb_exit(i32* null, i32 %19)
  br label %21

21:                                               ; preds = %17, %3
  %22 = load i32, i32* %5, align 4
  store i32 %22, i32* @gdtbase, align 4
  ret void
}

declare dso_local i32 @vm_set_desc(i32, i32, i32, i32, i64, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @cb_exit(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
